# python_mcp_server

./: .gitignore  .pre-commit-config.yaml  Cleaned_data.csv  LICENSE  README.md  csv_server.py  hello_world_server.py  main.py  pyproject.toml
documentation/: 01-points-to-consider-in-mcp-server.md  02-basic-mcp-server.md  03-mcp-tool-basic.md
